// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Melodies test suite should generate melodies based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "G#3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "G#3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 1200,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 71,
    "next": 360,
    "note": "B3",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 73,
    "next": 120,
    "note": "C#4",
    "time": 1800,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 240,
    "note": "E4",
    "time": 1920,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 480,
    "note": "A3",
    "time": 2160,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 69,
    "next": 240,
    "note": "A3",
    "time": 2640,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 66,
    "next": 360,
    "note": "F#3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 240,
    "note": "B3",
    "time": 3240,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 66,
    "next": 120,
    "note": "F#3",
    "time": 3480,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 64,
    "next": 120,
    "note": "E3",
    "time": 3600,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 62,
    "next": 120,
    "note": "D3",
    "time": 3720,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "G#3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "G#3",
    "time": 4320,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 4800,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 5040,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "G#3",
    "time": 5280,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 480,
    "note": "G#3",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 6240,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 6480,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 480,
    "note": "A3",
    "time": 6720,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 67,
    "next": 320,
    "note": "G3",
    "time": 7200,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 72,
    "next": 160,
    "note": "C4",
    "time": 7520,
  },
]
`;

exports[`A Melodies test suite should generate melodies based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 480,
    "note": "A3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 480,
    "note": "B3",
    "time": 480,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 69,
    "next": 240,
    "note": "A3",
    "time": 1200,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 240,
    "note": "E4",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 1680,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "G#3",
    "time": 1920,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "G#3",
    "time": 2160,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 66,
    "next": 480,
    "note": "F#3",
    "time": 2400,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "G#3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "G#3",
    "time": 3120,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 66,
    "next": 480,
    "note": "F#3",
    "time": 3360,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 480,
    "note": "A3",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 71,
    "next": 480,
    "note": "B3",
    "time": 4320,
  },
  Object {
    "dur": 960,
    "isRest": false,
    "midi": 76,
    "next": 960,
    "note": "E4",
    "time": 4800,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 79,
    "next": 480,
    "note": "G4",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "G#3",
    "time": 5760,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "G#3",
    "time": 6000,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 66,
    "next": 480,
    "note": "F#3",
    "time": 6240,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 72,
    "next": 240,
    "note": "C4",
    "time": 6720,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 69,
    "next": 240,
    "note": "A3",
    "time": 6960,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 67,
    "next": 240,
    "note": "G3",
    "time": 7200,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 240,
    "note": "B3",
    "time": 7440,
  },
]
`;

exports[`A Melodies test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 65,
    "next": 480,
    "note": "F3",
    "time": 0,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 65,
    "next": 480,
    "note": "F3",
    "time": 480,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 65,
    "next": 480,
    "note": "F3",
    "time": 960,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 73,
    "next": 360,
    "note": "Db4",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 120,
    "note": "",
    "time": 1800,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 73,
    "next": 360,
    "note": "Db4",
    "time": 1920,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 120,
    "note": "",
    "time": 2280,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 73,
    "next": 360,
    "note": "Db4",
    "time": 2400,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 120,
    "note": "",
    "time": 2760,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "Ab3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "Ab3",
    "time": 3120,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 58,
    "next": 320,
    "note": "Bb2",
    "time": 3360,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 61,
    "next": 160,
    "note": "Db3",
    "time": 3680,
  },
]
`;
